Finished API with all companion methods and seeds
